--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,9 +38,27 @@
             <%= bootstrap_flash %>
           </div>
           <%= yield %>
+          <a href="#" class="btn" id="openBtn">Open modal</a>
+
         </div>
       </div><!--/row-->
-      <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+      <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">×</button>
+                <h3 class='modal-title'>Modal header</h3>
+            </div>
+            <div class="modal-body">
+              <p>My modal content here…</p>
+            </div>
+            <div class="modal-footer">
+              <button class="btn" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
       <footer>
         <p>&copy; Company 2018</p>
