--- a/app/views/projects/create.js.erb
+++ b/app/views/projects/create.js.erb
@@ -1,5 +1,5 @@
 <% if @project.persisted? %>
-	$('#project_list table tbody').append("<%=j render partial: 'table_record', locals: { project: @project } %>");
+	$('#project_list table tbody').append("<%=j render partial: '/projects/table_record', locals: { project: @project } %>");
 	clearViewPane();
 	$('.flash_msgs').html('<%=j bootstrap_flash %>');
 <% else %>
