--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,11 @@
-<h3><strong><%= @project.name %></strong></h3>
-<p><%= @project.description %></p>
+<h2><center>Project Details</center></h2>
+<p><strong>Name: <%= @project.name %></strong></p>
+<p><strong>Description: </strong><%= @project.description %></p>
 <div class='row'>
 	<%= link_to('Add New Task', new_task_path(project_id: @project.id), class: 'pull-right btn btn-default', remote: true , 'data-toggle' =>  "modal", 'data-target' => '#modal-window') %>
 </div>
 <div class='row'>
-	<div class='col-md-6' id= 'task_list'>
+	<div id= 'task_list'>
 		<table class='table table-bordered'>
 			<thead>
 				<tr>
@@ -18,14 +19,7 @@
 			</thead>
 			<tbody>
 				<% @tasks.each do |task| %>
-					<tr>
-						<td><%= @task.name %></td>
-						<td><%= @task.description %></td>
-						<td><%= @task.priority %></td>
-						<td><%= @task.deadline %></td>
-						<td><%= @task.status %></td>
-						<td></td>
-					</tr>
+					<%= render partial: '/tasks/table_record', locals: { task: task } %>
 				<% end %>
 			</tbody>
 		</table>
